force-app/main/default/objects/Contract_Type_Mapping__mdt/Contract_Type_Mapping__mdt.object-meta.xml
<CustomObject>
	<label>Contract_Type_Mapping</label>
	<pluralLabel>Contract_Type_Mapping</pluralLabel>
</CustomObject>