force-app/main/default/objects/Contract_Type_Mapping__mdt/fields/Contract_Type_Description__c.field-meta.xml
<CustomField>
	<fullName>Contract_Type_Description__c</fullName>
	<label>Contract_Type_Description</label>
	<type>Text</type>
	<length>100</length>
</CustomField>