force-app/main/default/objects/Contract_Type_Mapping__mdt/fields/Word_Template__c.field-meta.xml
<CustomField>
    <fullName>Word_Template__c</fullName>
    <description>Field stores the name of the Word template used to generate a contract</description>
    <label>Word Template</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>