force-app/main/default/objects/Contract_Type_Mapping__mdt/fields/Word_Template_Desc__c.field-meta.xml
<CustomField>
    <fullName>Word_Template_Desc__c</fullName>
    <description>Further description of the Word Template</description>
    <label>Word Template Desc</label>
    <type>TextArea</type>
</CustomField>